--- a/notebooks/visualize_database.ipynb
+++ b/notebooks/visualize_database.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Search Inputs"
+    "#### Search Inputs"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Search LLM Outputs"
+    "#### Search LLM Outputs"
    ]
   },
   {
@@ -92,7 +92,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize All Inputs"
+    "### Visualize All"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualize All Inputs"
    ]
   },
   {
@@ -108,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize All Metadata"
+    "#### Visualize All Metadata"
    ]
   },
   {
@@ -124,7 +131,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize Successful Metadata"
+    "#### Visualize All Transcripts (Listing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.transcript_dataframe.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualize All LLM Outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.llm_output_dataframe.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Status Information"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### About Metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Visualize Value Counts for All Metadata\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.metadata_dataframe.value_counts(subset=\"status\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Visualize Successful Metadata"
    ]
   },
   {
@@ -140,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize Unsuccessful Metadata"
+    "##### Visualize Unsuccessful Metadata"
    ]
   },
   {
@@ -158,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.metadata_dataframe.query(\"status == 'likely-an-advertisement'\")\n"
+    "db.metadata_dataframe.query(\"status == 'likely-an-advertisement'\")"
    ]
   },
   {
@@ -167,14 +236,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.metadata_dataframe.query(\"status == 'likely-video-unavailable'\")\n"
+    "db.metadata_dataframe.query(\"status == 'likely-video-unavailable'\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize All Transcripts (Listing)"
+    "#### About Transcripts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Visualize Value Counts for All Transcripts"
    ]
   },
   {
@@ -183,14 +259,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.transcript_dataframe"
+    "db.transcript_dataframe.value_counts(subset=\"status\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "### Visualize Successful Transcripts"
+    "##### Visualize Successful Transcripts"
    ]
   },
   {
@@ -206,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize Unsuccessful Transcripts"
+    "##### Visualize Unsuccessful Transcripts"
    ]
   },
   {
@@ -299,7 +380,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize Inputs with missing Metadata"
+    "#### About LLM Outputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Visualize Value Counts for all LLM Outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.llm_output_dataframe.value_counts(subset=\"status\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Visualize Successful LLM Outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.metadata_dataframe.query(\"status == 'success'\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Visualize Unuccessful LLM Outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.metadata_dataframe.query(\"status != 'success'\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize Inputs with missing Outputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualize Inputs with missing Metadata"
    ]
   },
   {
@@ -315,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize Inputs with missing Transcripts"
+    "#### Visualize Inputs with missing Transcripts"
    ]
   },
   {
@@ -335,7 +478,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize Inputs with missing Titles"
+    "#### Visualize Inputs with missing Titles"
    ]
   },
   {
@@ -351,7 +494,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize Inputs with \"untitled\" Title Slugs\n",
+    "##### Visualize Inputs with \"untitled\" Title Slugs\n",
     "\n",
     "Reasons: missing title OR unslugifiable titles"
    ]
@@ -374,7 +517,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize Inputs with unslugifiable Titles\n"
+    "##### Visualize Inputs with unslugifiable Titles\n"
    ]
   },
   {
@@ -396,23 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize All LLM Outputs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.llm_output_dataframe"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Visualize Inputs with missing LLM Outputs"
+    "#### Visualize Inputs with missing LLM Outputs"
    ]
   },
   {
@@ -436,7 +563,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Get indexers: couples of language code and transcript source"
+    "##### Get indexers: couples of language code and transcript source"
    ]
   },
   {
@@ -452,7 +579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Display all missing LLM output candidates for indexer couples."
+    "##### Display all missing LLM output candidates for indexer couples."
    ]
   },
   {
@@ -482,39 +609,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize Successful LLM Outputs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.get_success_df()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Visualize Errored LLM Outputs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.get_errors_df()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Visualize Inputs With Missing Outputs\n",
+    "### [OUTDATED] Visualize Inputs With Missing Outputs\n",
     "\n",
     "XXX Outdated\n",
     "\n",
@@ -529,7 +624,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.inputs_with_missing_outputs().sort_values(\"exc_name\")"
+    "# db.inputs_with_missing_outputs().sort_values(\"exc_name\")"
    ]
   },
   {
@@ -545,12 +640,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.inputs_with_missing_outputs().loc[\n",
-    "    (\n",
-    "        db.inputs_with_missing_outputs(keep=\"last\")[\"exc_name\"]\n",
-    "        != db.inputs_with_missing_outputs(keep=\"first\")[\"exc_name\"]\n",
-    "    )\n",
-    "]"
+    "# db.inputs_with_missing_outputs().loc[\n",
+    "#     (\n",
+    "#         db.inputs_with_missing_outputs(keep=\"last\")[\"exc_name\"]\n",
+    "#         != db.inputs_with_missing_outputs(keep=\"first\")[\"exc_name\"]\n",
+    "#     )\n",
+    "# ]"
    ]
   },
   {
@@ -566,7 +661,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.inputs_with_missing_outputs().query(\"output_path.isna()\")\n"
+    "# db.inputs_with_missing_outputs().query(\"output_path.isna()\")\n"
    ]
   },
   {
@@ -582,9 +677,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.inputs_with_missing_outputs().query(\n",
-    "    \"exc_name in ('NoTranscriptFound')\"\n",
-    ")\n"
+    "# db.inputs_with_missing_outputs().query(\n",
+    "#     \"exc_name in ('NoTranscriptFound')\"\n",
+    "# )\n"
    ]
   },
   {
@@ -602,10 +697,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.inputs_with_missing_outputs().query(\n",
-    "    \"(exc_name not in ('NoTranscriptFound', 'TranscriptsDisabled', 'RequestBlocked'))\"\n",
-    "    \"and output_path.notna()\"\n",
-    ")\n"
+    "# db.inputs_with_missing_outputs().query(\n",
+    "#     \"(exc_name not in ('NoTranscriptFound', 'TranscriptsDisabled', 'RequestBlocked'))\"\n",
+    "#     \"and output_path.notna()\"\n",
+    "# )\n"
    ]
   }
  ],
