--- a/notebooks/too_lazy_too_watch.ipynb
+++ b/notebooks/too_lazy_too_watch.ipynb
@@ -30,20 +30,21 @@
     "video_url = \"https://www.youtube.com/watch?v=xHdjzeeuP4o\"\n",
     "video_url = \"https://www.youtube.com/watch?v=v5YcH5X5Xgo\"\n",
     "video_url = \"https://www.youtube.com/watch?v=fZU-pNEKAQk\"\n",
+    "video_url = \"https://www.youtube.com/watch?v=YcIbZGTRMjI\"\n",
+    "video_url = \"https://www.youtube.com/watch?v=yXjMpdS1ZWY\"\n",
     "\n",
     "def please_summarize_for_me_because_i_am_lazy(\n",
     "    video_url: str,\n",
+    "    outputs_lookup_dir_path: Path,\n",
     "    *,\n",
-    "    preferred_languages: tuple[str, ...] = (\"fr\", \"en\"),\n",
+    "    preferred_languages: tuple[str, ...] = (\"fr\", \"fr-FR\", \"en\"),\n",
     ") -> dict[str, Path]:\n",
     "    video_id = extract_video_id(video_url)\n",
-    "    assert video_id\n",
+    "    if video_id is None:\n",
+    "        raise ValueError(f\"Failed to extract video_id for {video_url}\")\n",
     "\n",
     "    now = pd.Timestamp.now()\n",
     "\n",
-    "    outputs_lookup_dir_path = Path(\"../generated\").resolve()\n",
-    "    root_database_path = outputs_lookup_dir_path\n",
-    "    # root_database_path = Path(\"/tmp/youtube_summary/generated\")\n",
     "    root_database_path = outputs_lookup_dir_path / \"manual\"\n",
     "    root_database_path.mkdir(exist_ok=True, parents=True)\n",
     "\n",
@@ -64,8 +65,7 @@
     "\n",
     "    scrapper = YouTubeHtmlScrapper.from_video_id(video_id)\n",
     "    if scrapper is None:\n",
-    "        print(f\"ERROR Failed to fetch metadata for {video_id}\")\n",
-    "        raise ValueError\n",
+    "        raise ValueError(f\"Failed to fetch metadata for {video_id}\")\n",
     "\n",
     "    metadata_path = fetch_one_metadata(metadata_dir_path, video_id, scrapper)\n",
     "    video = VideoModel.from_path(Path(metadata_path))\n",
@@ -103,12 +103,13 @@
     "\n",
     "    return output_paths\n",
     "\n",
-    "\n",
+    "outputs_lookup_dir_path = Path(\"../generated\").resolve()\n",
     "preferred_languages = (\"fr\", \"fr-FR\")  # force french\n",
-    "preferred_languages = (\"fr\", \"fr-FR\", \"en\")  # english or french\n",
-    "# preferred_languages = (\"en\",)  # force english\n",
+    "preferred_languages = (\"en\",)  # force english\n",
+    "# try french then english, then try translate to french then english\n",
+    "preferred_languages = (\"fr\", \"fr-FR\", \"en\")  \n",
     "please_summarize_for_me_because_i_am_lazy(\n",
-    "    video_url, preferred_languages=preferred_languages\n",
+    "    video_url, outputs_lookup_dir_path, preferred_languages=preferred_languages\n",
     ")"
    ]
   }
